--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <h2>ALUNO</h2>
         <img src="./assets/WhatsApp Image 2024-10-05 at 15.58.34.jpeg" alt="Foto da Aluna">
         <p><strong>Nome do Aluno</strong></p>
-        <p>Pedro Augusto de Oliveria Siqueira</p>
-        <p>Faculdade de Economia e Administração</p>
+        <p>Pedro Augusto de Oliveira Siqueira</p>
+        <p>Faculdade de Economia, Administração e Contabilidade</p>
         <p>GRADUAÇÃO</p>
 
         <div class="qr-code">
