--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             text-align: center;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
 
         .header {
@@ -40,6 +41,42 @@
         .header .menu-icon {
             font-size: 24px;
             cursor: pointer;
+            position: relative;
+        }
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 35px;
+            right: 0;
+            margin-left: 20px;
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown a {
+            color: black;
+            padding: 10px;
+            text-decoration: none;
+            display: block;
+            font-size: 14px;
+        }
+
+        .dropdown a:hover {
+            background-color: #f1f1f1;
+        }
+
+        .dropdown::after {
+            content: '';
+            position: absolute;
+            top: -10px;
+            right: 0px;
+            border-width: 0 10px 10px;
+            border-style: solid;
+            border-color: transparent transparent white transparent;
         }
 
         .card img {
@@ -69,7 +106,6 @@
 
         .qr-code img {
             width: 150px;
-            /* height: 150px; */
         }
 
         .footer {
@@ -92,21 +128,26 @@
 
         .usp-logo h4 {
             font-size: 14px;
-            margin-top: 0; /* Removendo o espaço entre a imagem e o texto */
+            margin-top: 0;
             text-align: center;
         }
     </style>
 </head>
 <body>
+
     <div class="card">
         <!-- Header com "e-Card" e ícone de três pontinhos -->
         <div class="header">
             <h3>e-Card</h3>
-            <span class="menu-icon">&#8942;</span>
+            <span class="menu-icon" onclick="toggleDropdown()">&#8942;
+                <div class="dropdown" id="dropdownMenu">
+                    <a href="#">Logout</a>
+                </div>
+            </span>
         </div>
         
         <div class="usp-logo">
-            <img src="./assets/usp-logo-png.png" alt="QR Code">
+            <img src="./assets/usp-logo-png.png" alt="Logo USP">
             <h4>Universidade de São Paulo</h4>
         </div>
 
@@ -125,5 +166,30 @@
             <p>Código QR expira em 05/10/2024 23:59</p>
         </div>
     </div>
+
+    <script>
+        function toggleDropdown() {
+            var dropdown = document.getElementById("dropdownMenu");
+            if (dropdown.style.display === "block") {
+                dropdown.style.display = "none";
+            } else {
+                dropdown.style.display = "block";
+            }
+        }
+
+        // Fechar o dropdown se o usuário clicar fora dele
+        window.onclick = function(event) {
+            if (!event.target.matches('.menu-icon')) {
+                var dropdowns = document.getElementsByClassName("dropdown");
+                for (var i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.style.display === "block") {
+                        openDropdown.style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
+
 </body>
 </html>
